# dn

./: README.md  setup.cfg
.github/workflows/: ci.yml
dn/: __init__.py  src.py  to.py  util.py
dn/tests/: test_src.py  utils_for_testing_dn.py
dn/tests/data/: test.docx  test.epub  test.html  test.ipynb  test.md  test.odp  test.ods  test.odt  test.pptx  test.rtf  test.txt  test.xlsx
misc/: dn_readme.ipynb  sample_notebook.ipynb
