[metadata]
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
version = 0.0.1
description = Tools for markdown parsing and generation
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = dn
display_name = dn

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    dol
		

